Feat/49 51 random images (#66)
* New ecg images

* Hier is so stuff weiß nich irgendwie isses zu lange her keine ahnung was hier alles dabei is :)

* Fix image fetching

* Automation: Code Formatter

* Automation: Code Formatter

* A little bit of cleanup

* Automation: Code Formatter

* Fix linting

* Global random seeding

* Fix tests(?)

* Automation: Code Formatter

* Automation: Code Formatter

* Write api tests

* Remove print

* Fix tests

* Automation: Code Formatter

* Jump to next annotation on save

* Update MANUAL.md

* Use cypress env var for api url
